# Rendezvous-Proximity

./: .gitignore  Dockerfile  Proposal.tex  README.md
proposal/: Proposal.bbl  Proposal.tex  mybibfile.bib
report/: Report-Template.bbl  Report-Template.tex  Report.aux  Report.bbl  Report.blg  Report.fdb_latexmk  Report.fls  Report.out  Report.tex  mybibfile.bib
report/figures/: convert.sh  simulation_outputs
simulator/: CMakeLists.txt  utils
simulator/outputs/: above200InfiniteLQR.csv  above20InfiniteLQR.csv  below200InfiniteLQR-stats.md  below200InfiniteLQR.csv  box10000InfiniteLQRLinearTracking-stats.md  box10000InfiniteLQRLinearTracking.csv  box10000VaryingInfiniteLQRLinearTracking-stats.md  box10000VaryingInfiniteLQRLinearTracking.csv  box20000InfiniteLQRLinearTracking-stats.md  box20000InfiniteLQRLinearTracking.csv  box20000VaryingInfiniteLQRLinearTracking-stats.md  box20000VaryingInfiniteLQRLinearTracking.csv  box30000InfiniteLQRLinearTracking-stats.md  box30000InfiniteLQRLinearTracking.csv  box30000VaryingInfiniteLQRLinearTracking-stats.md  box30000VaryingInfiniteLQRLinearTracking.csv  boxGeoInfiniteLQRLinearTracking-stats.md  boxGeoInfiniteLQRLinearTracking.csv  boxGeoVaryingInfiniteLQRLinearTracking-stats.md  boxGeoVaryingInfiniteLQRLinearTracking.csv  boxInfiniteLQRLinearTracking.csv  boxInfiniteLQRNonLinearTracking.csv  leading2000InfiniteLQR.csv  leading2000InfiniteLQRLinearTracking.csv  leading2000InfiniteLQRNonLinearTracking.csv  mpcStabilize-stats.md  mpcStabilize.csv  rendevousMain  sim.csv
simulator/src/: CodeGen.cpp  CodeGen.h  Constants.h  FiniteLQR.cpp  FiniteLQR.h  InfiniteLQR.cpp  InfiniteLQR.h  InfiniteLQRLinearTracking.cpp  InfiniteLQRLinearTracking.h  InfiniteLQRNonLinearTracking.cpp  InfiniteLQRNonLinearTracking.h  MPCController.cpp  MPCNonLinearTracking.cpp  MPCNonLinearTracking.h  OrbitalState.cpp  OrbitalState.h  RiccatiSolvers.cpp  RiccatiSolvers.h  SimulationRuns.cpp  SimulationRuns.h  Simulator.cpp  Simulator.h  TrajectoryGeneration.cpp  TrajectoryGeneration.h  Visualizations.cpp  Visualizations.h  main.cpp
simulator/tests/: OrbitalStateTest.cpp
simulator/trajectories/: 2000mLeadingRendezvous.csv  Rendezvous Trajectories.ipynb
simulator/trajectories/.ipynb_checkpoints/: 2000mLeadingRendezvous-checkpoint.csv  Rendezvous Trajectories-checkpoint.ipynb
simulator/trajectories/utils/: constants.py  ephemerides.py  lamberts.py  lamberts_test.py  orbital_elements.py  orbital_elements_test.py  propagator.py
simulator/trajectories/utils/.ipynb_checkpoints/: lamberts-checkpoint.py
